--- a/Autobahn/build.gradle
+++ b/Autobahn/build.gradle
@@ -3,8 +3,9 @@ buildscript {
     repositories {
         mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath evie.libs.gradlePlugin
     }
 }
 
