--- a/Autobahn/build.gradle
+++ b/Autobahn/build.gradle
@@ -1,7 +1,7 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
@@ -11,7 +11,7 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
 }
